--- a/wox.ui.windows/Views/GridView.xaml
+++ b/wox.ui.windows/Views/GridView.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-        <converters:IconPathConverter x:Key="IconPathConverter"/>
+        <converters:WoxImageToImageSourceConverter x:Key="IconConverter"/>
     </UserControl.Resources>
 
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
@@ -40,7 +40,7 @@
 
                                 <!-- Icon -->
                                 <Image Grid.Row="0"
-                                       Source="{Binding IcoPath, Converter={StaticResource IconPathConverter}}"
+                                       Source="{Binding Icon, Converter={StaticResource IconConverter}}"
                                        Width="32" Height="32"
                                        HorizontalAlignment="Center" VerticalAlignment="Center"
                                        Margin="0,0,0,8"/>
